--- a/SocialMediaFreelas.App/Pages/Freelancers/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Index.cshtml
@@ -6,6 +6,14 @@
 
 <h1>Index</h1>
 
+@if (TempData["MensagemSucesso"] != null)
+{
+    <div class="alert alert-success button-success" role="alert" id="success-message">
+        @TempData["MensagemSucesso"]
+        <i class="fa fa-check" aria-hidden="true"></i>
+    </div>
+}
+
 <table class="table">
     <thead>
         <tr>
@@ -41,6 +49,7 @@
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
+                    <a asp-page="./Create">Create</a> |
                     <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
