--- a/SocialMediaFreelas.App/Pages/Shared/_LayoutCustom.cshtml
+++ b/SocialMediaFreelas.App/Pages/Shared/_LayoutCustom.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <style>
+    <!-- <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -137,9 +137,9 @@
                     background-color: #0056b3;
                 }
 
-    </style>
+    </style> -->
 
-    <header>
+    <!-- <header>
         <div class="logo">
             <img src="~/assets/img/unit-png.png" alt="Unit Logo">
         </div>
@@ -156,7 +156,7 @@
             <li><a href="#">´</a></li>
             <li><a href="#">´</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
   @*  <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
