Adiciona pages corrigidas

--- a/SocialMediaFreelas.App/Pages/Freelancers/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Freelancers/Create.cshtml
@@ -8,6 +8,10 @@
     .classe{
         background: red !important;
     }
+
+    @@media (max-width: 768px){
+        .classe {background: blue !important;}
+    }
 </style>
 
 <h1>Create</h1>
