Adiciona Pages CLIENTE

--- a/SocialMediaFreelas.App/Pages/Clientes/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Create.cshtml
@@ -1,4 +1,83 @@
 ﻿@page
 @model SocialMediaFreelas.Pages.Clientes.CreateModel
 @{
+    ViewData["Title"] = "Create";
+}
+
+<style>
+    .classe{
+        background: red !important;
+    }
+</style>
+
+<h1>Create</h1>
+
+
+@if (TempData["MensagemSucesso"] != null)
+{
+    <div class="alert alert-success button-success" role="alert" id="success-message">
+        @TempData["MensagemSucesso"]
+        <i class="fa fa-check" aria-hidden="true"></i>
+    </div>
+}
+
+<h4>Cliente</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+
+            <div class="form-group classe">
+                <label asp-for="ClienteInputModel.NumeroDocumento" class="control-label"></label>
+                <input asp-for="ClienteInputModel.NumeroDocumento" class="form-control" />
+                <span asp-validation-for="ClienteInputModel.NumeroDocumento" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ClienteInputModel.Nome" class="control-label"></label>
+                <input asp-for="ClienteInputModel.Nome" class="form-control" />
+                <span asp-validation-for="ClienteInputModel.Nome" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ClienteInputModel.DataNascimento" class="control-label"></label>
+                <input asp-for="ClienteInputModel.DataNascimento" type="date" class="form-control" />
+                <span asp-validation-for="ClienteInputModel.DataNascimento" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ClienteInputModel.Email" class="control-label"></label>
+                <input asp-for="ClienteInputModel.Email" class="form-control" />
+                <span asp-validation-for="ClienteInputModel.Email" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ClienteInputModel.Telefone" class="control-label"></label>
+                <input asp-for="ClienteInputModel.Telefone" class="form-control" />
+                <span asp-validation-for="ClienteInputModel.Telefone" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ClienteInputModel.Senha" class="control-label"></label>
+                <input asp-for="ClienteInputModel.Senha" class="form-control" type="password" />
+                <span asp-validation-for="ClienteInputModel.Senha" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-page="Index">Back to List</a>
+</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
