--- a/SocialMediaFreelas.App/Pages/Clientes/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Index.cshtml
@@ -1,4 +1,60 @@
 ﻿@page
 @model SocialMediaFreelas.Pages.Clientes.IndexModel
 @{
+    ViewData["Title"] = "Index";
 }
+
+<h1>Index</h1>
+
+@if (TempData["MensagemSucesso"] != null)
+{
+    <div class="alert alert-success button-success" role="alert" id="success-message">
+        @TempData["MensagemSucesso"]
+        <i class="fa fa-check" aria-hidden="true"></i>
+    </div>
+}
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Response[0].NumeroDocumento)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Response[0].Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Response[0].Telefone)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Response[0].Email)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Response)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NumeroDocumento)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Telefone)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    <a asp-page="./Create">Create</a> |
+                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
