--- a/SocialMediaFreelas.App/Pages/Clientes/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@page "{id:int?}"
-@model SocialMediaFreelas.Pages.Clientes.DeleteModel
+@model SocialMediaFreelas.Pages.Clientes.DetailsModel
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
 <h4>Cliente</h4>
 <hr />
@@ -40,9 +40,6 @@
                 <input asp-for="ClienteViewModel.Telefone" class="form-control" disabled />
             </div>
 
-            <div class="form-group mt-2">
-                <input type="submit" value="Delete" class="btn btn-danger" />
-            </div>
         </form>
     </div>
 </div>
