--- a/SocialMediaFreelas.App/Pages/Experiencias/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@page "{id:int?}"
-@model SocialMediaFreelas.Pages.Experiencias.DeleteModel
+@model SocialMediaFreelas.Pages.Experiencias.DetailsModel
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
 <h4>Experiencia</h4>
 <hr />
@@ -39,15 +39,12 @@
                 <label asp-for="ExperienciaViewModel.Valor" class="control-label"></label>
                 <input asp-for="ExperienciaViewModel.Valor" class="form-control" disabled />
             </div>
-
+            
             <div class="form-group">
                 <label asp-for="ExperienciaViewModel.Avaliacao" class="control-label"></label>
                 <input asp-for="ExperienciaViewModel.Avaliacao" class="form-control" disabled />
             </div>
 
-            <div class="form-group mt-2">
-                <input type="submit" value="Delete" class="btn btn-danger" />
-            </div>
         </form>
     </div>
 </div>
