--- a/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@page "{id:int?}"
-@model SocialMediaFreelas.Pages.Vagas.DeleteModel
+@model SocialMediaFreelas.Pages.Vagas.DetailsModel
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
 <h4>Vaga</h4>
 <hr />
@@ -27,12 +27,12 @@
 
             <div class="form-group">
                 <label asp-for="VagaViewModel.Descricao" class="control-label"></label>
-                <input asp-for="VagaViewModel.Descricao" type="date" class="form-control" disabled />
+                <input asp-for="VagaViewModel.Descricao" class="form-control" disabled />
             </div>
 
             <div class="form-group">
                 <label asp-for="VagaViewModel.Cargo" class="control-label"></label>
-                <input asp-for="VagaViewModel.Cargo" class="form-control" disabled />
+                <input asp-for="VagaViewModel.Cargo" type="date" class="form-control" disabled />
             </div>
 
             <div class="form-group">
@@ -45,9 +45,6 @@
                 <input asp-for="VagaViewModel.Remuneracao" class="form-control" disabled />
             </div>
 
-            <div class="form-group mt-2">
-                <input type="submit" value="Delete" class="btn btn-danger" />
-            </div>
         </form>
     </div>
 </div>
