Cria home separadas cliente e freelancer

--- a/SocialMediaFreelas.App/Pages/Experiencias/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Create.cshtml
@@ -43,7 +43,7 @@
 
             <div class="form-group">
                 <label asp-for="ExperienciaInputModel.Empresa" class="control-label"></label>
-                <input asp-for="ExperienciaInputModel.Empresa" type="date" class="form-control" />
+                <input asp-for="ExperienciaInputModel.Empresa" class="form-control" />
                 <span asp-validation-for="ExperienciaInputModel.Empresa" class="text-danger"></span>
             </div>
 
