--- a/SocialMediaFreelas.App/Pages/Experiencias/Edit.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Edit.cshtml
@@ -29,7 +29,7 @@
 
             <div class="form-group">
                 <label asp-for="ExperienciaUpdateModel.Tecnologia" class="control-label"></label>
-                <input asp-for="ExperienciaUpdateModel.Tecnologia" type="date" class="form-control" />
+                <input asp-for="ExperienciaUpdateModel.Tecnologia"  class="form-control" />
                 <span asp-validation-for="ExperienciaUpdateModel.Tecnologia" class="text-danger"></span>
             </div>
 
