--- a/SocialMediaFreelas.App/Pages/Home/Cliente/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Home/Cliente/Index.cshtml
@@ -1,10 +1,7 @@
 ﻿@page
-@model IndexModel
+@model HomeClienteModel
 @{
     ViewData["Title"] = "Home page";
-}
-@{
-    Layout = "_LayoutCustomNaoLogado";
 }
 
 <style>
@@ -42,12 +39,11 @@
                 <div class="col-xxl-5">
                     <!-- Header text content-->
                     <div class="text-center text-xxl-start">
-                        <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Design &middot; Development &middot; Marketing</div></div>
-                        <div class="fs-3 fw-light text-muted">Nós podemos ajudar a sua empresa a </div>
-                        <h1 class="display-3 fw-bolder mb-5" id="titulo-principal-home"><span class="text-gradient d-inline">Encontrar os melhores programadores</span></h1>
+                        <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase"></div></div>
+                        <div class="fs-3 fw-light text-muted">Seja bem vindo!</div>
+                        <h1 class="display-3 fw-bolder mb-5" id="titulo-principal-home"><span class="text-gradient d-inline">Encontre um profissional agora</span></h1>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="login/cliente">Encontre um profissional</a>
-                            <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="login/freelancer">Quero trabalhar</a>
+                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="../freelancers">Encontre um profissional</a>
                         </div>
                     </div>
                 </div>
@@ -69,7 +65,7 @@
 
      <div class="container px-5 my-5">
                 <div class="text-center mb-5">
-                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resume</span></h1>
+                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Profissionais</span></h1>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
