--- a/SocialMediaFreelas.App/Pages/Vagas/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Create.cshtml
@@ -43,7 +43,7 @@
 
             <div class="form-group">
                 <label asp-for="VagaInputModel.Descricao" class="control-label"></label>
-                <input asp-for="VagaInputModel.Descricao" type="date" class="form-control" />
+                <input asp-for="VagaInputModel.Descricao" class="form-control" />
                 <span asp-validation-for="VagaInputModel.Descricao" class="text-danger"></span>
             </div>
 
