--- a/SocialMediaFreelas.App/Pages/Experiencias/Delete.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Delete.cshtml
@@ -27,7 +27,7 @@
 
             <div class="form-group">
                 <label asp-for="ExperienciaViewModel.Empresa" class="control-label"></label>
-                <input asp-for="ExperienciaViewModel.Empresa" type="date" class="form-control" disabled />
+                <input asp-for="ExperienciaViewModel.Empresa"  class="form-control" disabled />
             </div>
 
             <div class="form-group">
