--- a/SocialMediaFreelas.App/Pages/Shared/_LayoutCustomNaoLogado.cshtml
+++ b/SocialMediaFreelas.App/Pages/Shared/_LayoutCustomNaoLogado.cshtml
@@ -11,28 +11,27 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
+     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
         <div class="container px-5">
             <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Freelas Unit</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                    <li class="nav-item"><a class="nav-link" href="../Home/cliente">Inicio C</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../Home/freelancer">Inicio F</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../Vagas/">Vagas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../Freelancers/">Freelancers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../Clientes/">Clientes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#quemSomos">Quem somos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#clientes">Clientes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-   <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-       </main>
+
+    <div class="container">
+        @RenderBody()
     </div>
 
-
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
