--- a/SocialMediaFreelas.App/Pages/Vagas/Delete.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Delete.cshtml
@@ -27,7 +27,7 @@
 
             <div class="form-group">
                 <label asp-for="VagaViewModel.Descricao" class="control-label"></label>
-                <input asp-for="VagaViewModel.Descricao" type="date" class="form-control" disabled />
+                <input asp-for="VagaViewModel.Descricao" class="form-control" disabled />
             </div>
 
             <div class="form-group">
