--- a/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
@@ -32,7 +32,7 @@
 
             <div class="form-group">
                 <label asp-for="VagaViewModel.Cargo" class="control-label"></label>
-                <input asp-for="VagaViewModel.Cargo" type="date" class="form-control" disabled />
+                <input asp-for="VagaViewModel.Cargo" class="form-control" disabled />
             </div>
 
             <div class="form-group">
