--- a/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
+++ b/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
@@ -17,8 +17,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                    <li class="nav-item"><a class="nav-link" href="../Home/cliente">Inicio C</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../Home/freelancer">Inicio F</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../Home/Cliente">Inicio C</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../Home/Freelancer">Inicio F</a></li>
                     <li class="nav-item"><a class="nav-link" href="../Vagas/">Vagas</a></li>
                     <li class="nav-item"><a class="nav-link" href="../Freelancers/">Freelancers</a></li>
                     <li class="nav-item"><a class="nav-link" href="../Clientes/">Clientes</a></li>
