Corrige relacionamento Freelancer Experiencias

--- a/SocialMediaFreelas.App/Pages/Experiencias/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Experiencias/Create.cshtml
@@ -61,7 +61,7 @@
 
             <div class="form-group">
                 <label asp-for="ExperienciaInputModel.Avaliacao" class="control-label"></label>
-                <input asp-for="ExperienciaInputModel.Avaliacao" class="form-control" type="password" />
+                <input asp-for="ExperienciaInputModel.Avaliacao" class="form-control"/>
                 <span asp-validation-for="ExperienciaInputModel.Avaliacao" class="text-danger"></span>
             </div>
 
