--- a/SocialMediaFreelas.App/Pages/Vagas/Create.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Create.cshtml
@@ -61,7 +61,7 @@
 
             <div class="form-group">
                 <label asp-for="VagaInputModel.Remuneracao" class="control-label"></label>
-                <input asp-for="VagaInputModel.Remuneracao" class="form-control" type="password" />
+                <input asp-for="VagaInputModel.Remuneracao" class="form-control"/>
                 <span asp-validation-for="VagaInputModel.Remuneracao" class="text-danger"></span>
             </div>
 
