Finaliza funcao candidatar-se

--- a/SocialMediaFreelas.App/Pages/Clientes/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Index.cshtml
@@ -6,13 +6,13 @@
 
 <h1>Index</h1>
 
-@if (TempData["MensagemSucesso"] != null)
+@*@if (TempData["MensagemSucesso"] != null)
 {
     <div class="alert alert-success button-success" role="alert" id="success-message">
         @TempData["MensagemSucesso"]
         <i class="fa fa-check" aria-hidden="true"></i>
     </div>
-}
+}*@
 
 <table class="table">
     <thead>
