--- a/SocialMediaFreelas.App/Pages/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Index.cshtml
@@ -46,8 +46,8 @@
                         <div class="fs-3 fw-light text-muted">Nós podemos ajudar a sua empresa a </div>
                         <h1 class="display-3 fw-bolder mb-5" id="titulo-principal-home"><span class="text-gradient d-inline">Encontrar os melhores programadores</span></h1>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="login/cliente">Encontre um profissional</a>
-                            <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="login/freelancer">Quero trabalhar</a>
+                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="Login/Cliente">Encontre um profissional</a>
+                            <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="Login/Freelancer">Quero trabalhar</a>
                         </div>
                     </div>
                 </div>
