--- a/SocialMediaFreelas.App/Pages/Login/Cliente/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Login/Cliente/Index.cshtml
@@ -107,12 +107,12 @@
         </div>
     }
 
-    @if (TempData["MensagemSucesso"] != null)
+@*    @if (TempData["MensagemSucesso"] != null)
     {
         <div class="alert alert-success button-success" role="alert">
             @TempData["MensagemSucesso"]
         </div>
-    }
+    }*@
 
     <form method="post">
         <div class="form-icon">
