--- a/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
+++ b/SocialMediaFreelas.App/Pages/Shared/_Layout.cshtml
@@ -11,21 +11,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-        <div class="container px-5">
-            <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Freelas Unit</span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                    <li class="nav-item"><a class="nav-link" href="../Home/Cliente">Inicio C</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../Home/Freelancer">Inicio F</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../Vagas/">Vagas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../Freelancers/">Freelancers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../Clientes/">Clientes</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+
+    @await Component.InvokeAsync("Top")
+
    <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
