--- a/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <input type="hidden" asp-for="VagaViewModel.Id"/>
@@ -50,6 +50,14 @@
 </div>
 
 <div>
+    <form method="post">
+    <div class="form-group">
+        <input type="hidden" asp-for="VagaViewModel.Id" />
+        <input type="hidden" asp-for="VagaViewModel.UserId" />
+        <input type="submit" value="Candidatar-se" class="btn btn-primary" />
+    </div>
+    </form>
+
     <a asp-page="Index">Back to List</a>
 </div>
 
