--- a/SocialMediaFreelas.App/Pages/Vagas/Edit.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Edit.cshtml
@@ -15,11 +15,11 @@
 
             <input type="hidden" asp-for="VagaUpdateModel.Id"/>
 
-            <div class="form-group">
+@*            <div class="form-group">
                 <label asp-for="VagaUpdateModel.FreelancerId" class="control-label"></label>
                 <input asp-for="VagaUpdateModel.FreelancerId" class="form-control" />
                 <span asp-validation-for="VagaUpdateModel.FreelancerId" class="text-danger"></span>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 <label asp-for="VagaUpdateModel.Titulo" class="control-label"></label>
